--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div class="nav-container">
                 <ul class="nav-menu">
-                    <li><a href="#hero">Home</a></li>
+                    <li><a href="#home">Home</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#about">About</a></li>
@@ -103,15 +103,15 @@
         <h2 class="section-title">Skills</h2>
         <div class="skills-container">
             <div class="skill-item">
-                <i class="fab fa-html5"></i>
+                <i id="html"class="fab fa-html5"></i>
                 <h3>HTML5</h3>
             </div>
             <div class="skill-item">
                 <i class="fab fa-css3-alt"></i>
                 <h3>CSS3</h3>
             </div>
-            <div class="skill-item">
-                <i class="fab fa-js"></i>
+            <div  class="skill-item">
+                <i id="js" class="fab fa-js"></i>
                 <h3>JavaScript</h3>
             </div>
             <div class="skill-item">
@@ -119,15 +119,15 @@
                 <h3>React</h3>
             </div>
             <div class="skill-item">
-                <i class="fab fa-node-js"></i>
+                <i id="nodejs"class="fab fa-node-js"></i>
                 <h3>Node.js</h3>
             </div>
             <div class="skill-item">
-                <i class="fab fa-git-alt"></i>
+                <i id="git"class="fab fa-git-alt"></i>
                 <h3>Git</h3>
             </div>
             <div class="skill-item">
-                <i class="fab fa-java"></i>
+                <i id="java" class="fab fa-java"></i>
                 <h3>java</h3>
             </div>
             <div class="skill-item">
